--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -9,15 +9,13 @@
 <body>
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <form action="/members/new" method="post" role="form"
-          th:object="${memberForm}">
+    <form action="/members/new" method="post" role="form" th:object="${memberForm}">
         <div class="form-group">
             <label th:for="name">이름</label>
             <input class="form-control" placeholder="이름을 입력하세요" th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'"
                    th:field="*{name}"
                    type="text">
-            <p th:errors="*{name}"
-               th:if="${#fields.hasErrors('name')}">Incorrect date</p>
+            <p th:errors="*{name}" th:if="${#fields.hasErrors('name')}">Incorrect date</p>
         </div>
         <div class="form-group">
             <label th:for="city">도시</label>
